Fix issue where descriptions in the issues list ignore CommonMark Markdown table alignment (#40515).
Contributed by Takenori TAKAKI (@takenory).


git-svn-id: https://svn.redmine.org/redmine/trunk@22787 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1357,6 +1357,9 @@ div.wiki table, div.wiki td, div.wiki th {
   padding: 4px;
 }
 
+div.wiki table td[align=left], div.wiki table th[align=left] { text-align: left; }
+div.wiki table td[align=right], div.wiki table th[align=right] { text-align: right; }
+
 div.wiki .wiki-class-noborder, div.wiki .wiki-class-noborder td, div.wiki .wiki-class-noborder th {border:0;}
 
 div.wiki .external {
